Fix invisible <code> text in dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -446,6 +446,9 @@ article .prev-next-jump {
   article {
     color: #e9e9e9;
   }
+  article code {
+    color: #3b3b3b;
+  }
   article .prelude h1, article .prelude h1 a, article .prev-next-jump a {
     color: #ec547f;
   }
